Fixed switches not connected to settings state, updated page title

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -17,11 +17,11 @@
     <meta name="twitter:creator" content="@luavixen">
     <meta name="twitter:site" content="@luavixen">
     <meta name="twitter:image" content="https://foxgirl.dev/file/gifspin-banner.jpg?nonce=1000">
-    <meta property="og:title" content="Gifspin">
+    <meta property="og:title" content="spin.foxgirl.dev">
     <meta property="og:description" content="Create spinning gifs from static images online">
     <meta property="og:image" content="https://foxgirl.dev/file/gifspin-banner.jpg?nonce=1000">
     <meta property="og:url" content="https://spin.foxgirl.dev/">
-    <title>Gifspin</title>
+    <title>spin.foxgirl.dev</title>
   </head>
   <body>
 
