Change app region and default settings, update footer

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -92,7 +92,7 @@
           <span>made with</span>
           <span><object id="gs-footer-heart" type="image/svg+xml" data="./assets/svg-heart.svg" aria-label="love"></object></span>
           <span>by</span>
-          <span><a id="gs-footer-twitter" href="https://twitter.com/luavixen">@luavixen</a></span>
+          <span><a id="gs-footer-twitter" href="https://foxgirl.dev/">lua</a></span>
         </small>
       </footer>
 
